--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=crawler-app
 server.port=4567
+app.crawler.url=${CRAWLER_URL}
 
-spring.datasource.url=jdbc:h2:mem:crawlerdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:${DATABASE_DB};DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PWD}
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.sql.init.mode=always
 
